# tzara

./: LICENSE  README.md  pyproject.toml
src/tzara/: __main__.py  agent.py  cli.py
src/tzara/interfaces/: cli.py
src/tzara/tools/: calculator.py  fs.py  invoices.py
